--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,13 @@ dependencies:
     sdk: flutter
   shared_preferences: ^0.5.3+2
   http: ^0.12.0
+  date_format: ^1.0.6
+  flutter_localizations:
+    sdk: flutter
+  english_words: ^3.1.5
+  photo_view: ^0.9.2
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,6 +54,7 @@ flutter:
     - assets/logo/logo-black.png
     - assets/logo/logo.png
     - assets/logo/logo@2x-1.png
+    - assets/image/testimage1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
