--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
     sdk: flutter
   english_words: ^3.1.5
   photo_view: ^0.9.2
+  flutter_bloc: ^4.0.0
+  equatable: ^0.2.0
+  rxdart: ^0.23.1
 
 
 
